# bounce

./: .gitignore  CMakeLists.txt  CREDITS.md  LICENSE.md  Makefile  README.md  TODO.md  git_watcher.cmake
docs/: CMakeLists.txt  Doxyfile
docs/pages/: main_page.md
include/bounce/: bounce.hpp
include/bounce/colour/: colour.hpp
include/bounce/event/collision/: collision.hpp
include/bounce/event/delayed/: delayed.hpp
include/bounce/event/time_pause/: time_pause.hpp
include/bounce/game/: game.hpp
include/bounce/input/context/: context.hpp
include/bounce/logging/: logger.hpp
include/bounce/object/: object.hpp
include/bounce/physics/collider/: collider.hpp
include/bounce/physics/engine/: engine.hpp
include/bounce/physics/field/: air_resistance.hpp  bounded_field.hpp  field.hpp  force_fields.hpp  gravity.hpp  point_source.hpp  (+1 more)
include/bounce/renderer/: globj.hpp  renderer.hpp
include/bounce/scene/: scene.hpp
include/bounce/serialisation/: json.hpp
include/bounce/sound/: settings.hpp  sounds.hpp
include/bounce/transform/: transform.hpp
include/bounce/version/: version.hpp
resources/shaders/fragment/: 1bit_dithered.glsl  alt_space.glsl  bloom.glsl  crt.glsl  filter33.glsl  font.glsl  fragment.glsl  ordered_dithering.glsl  quad.glsl  space.glsl  sprite.glsl  star.glsl
resources/shaders/vertex/: notransform.glsl  vertex.glsl
scripts/: opt_test.py
src/: README.md  circle.hpp  game.cpp  game.hpp  geometric_equation.hpp  line.cpp  line.hpp  main.cpp  object.cpp  object.hpp  version.cpp.in  version.hpp
src/bounce/colour/: colours.cpp  ctor.cpp  factory.cpp  getter_setter.cpp  serialisation.cpp
src/bounce/game/: ctor.cpp  deserialise.cpp  dtor.cpp  getter_setter.cpp  input.cpp  logic.cpp  quit.cpp  run.cpp  save_load.cpp  scene.cpp  singleton.cpp
src/bounce/input/: active.cpp  handle_input.cpp
src/bounce/logging/: ctor.cpp  dtor.cpp  flush.cpp  path.cpp  singleton.cpp
src/bounce/object/: collision.cpp  ctor.cpp  dtor.cpp  getter_setter.cpp  identifier.cpp  renderables.cpp  serialisation.cpp  timestep.cpp  touching.cpp  update.cpp
src/bounce/renderer/: ctor.cpp  dtor.cpp  error.cpp  getter_setter.cpp  init.cpp  render.cpp  screen.cpp  shader.cpp  singleton.cpp  target.cpp  texture.cpp
src/bounce/resources/: ctor.cpp  get.cpp  read.cpp  root.cpp  singleton.cpp
src/bounce/scene/: camera.cpp  ctor.cpp  getter_setter.cpp  object.cpp  serialisation.cpp
src/bounce/serialisation/: json_utils.cpp
src/bounce/transform/: ctor.cpp  dtor.cpp  getter_setter.cpp  renderable.cpp  serialisation.cpp  tag.cpp  update.cpp
src/bounce/version/: version.cpp.in
src/common/: bounce.hpp  events.hpp
src/common/colour/: colour.hpp  colours.cpp  ctor.cpp  factory.cpp  getter_setter.cpp
src/common/event/: event.hpp
src/common/game/: ctor.cpp  dtor.cpp  game.hpp  getter_setter.cpp  input.cpp  logic.cpp  object.cpp  render.cpp  run.cpp  scene.cpp
src/common/input/: active.cpp  handle_input.cpp  manager.hpp
src/common/object/: collision.cpp  ctor.cpp  dtor.cpp  getter_setter.cpp  object.hpp  timestep.cpp
src/common/renderable/: cache.cpp  ctor.cpp  get_shape.cpp  lines.cpp
src/common/renderer/: camera.cpp  ctor.cpp  getter_setter.cpp  globj.hpp  init.cpp  object.cpp  render.cpp  renderables.hpp  renderer.hpp  screen.cpp  shader.cpp  singleton.cpp  target.cpp  texture.cpp
src/common/resources/: ctor.cpp  get.cpp  manager.hpp  read.cpp  root.cpp  singleton.cpp
src/common/scene/: camera.cpp  ctor.cpp  getter_setter.cpp  object.cpp  renderable.cpp  scene.hpp
src/common/shapes/: geometric_equation.hpp  line.hpp
src/common/transform/: getter_setter.cpp  transform.hpp
src/demo/: main.cpp  main_menu.hpp  menu_button.hpp  settings.hpp
src/demo/demo_music/: music.hpp
src/demo/demo_space_shooter/: end_game.hpp  enemy.hpp  free_roam.hpp  player.hpp  reticule.hpp  star.hpp  tut_menu.hpp
src/demo_main/: boid.hpp  boid_sim.hpp  free_roam.hpp  main.cpp  main_menu.hpp  menu_button.hpp  player.hpp
src/demo_main/demo_music/: music.hpp
src/demo_main/demo_platformer/: platformer.hpp  platformer_player.hpp
src/demo_main/demo_space_shooter/: enemy.hpp  free_roam.hpp  player.hpp  reticule.hpp  star.hpp  tut_menu.hpp
src/engine/: bounce.hpp  events.hpp
src/engine/colour/: colour.hpp  colours.cpp  ctor.cpp  factory.cpp  getter_setter.cpp
src/engine/game/: ctor.cpp  dtor.cpp  game.hpp  getter_setter.cpp  input.cpp  logic.cpp  quit.cpp  run.cpp  scene.cpp  singleton.cpp
src/engine/input/: active.cpp  ctor.cpp  getter_setter.cpp  handle_input.cpp  manager.hpp  rate.cpp
src/engine/logging/: ctor.cpp  dtor.cpp  flush.cpp  path.cpp  singleton.cpp
src/engine/object/: collision.cpp  ctor.cpp  dtor.cpp  getter_setter.cpp  object.hpp  renderables.cpp
src/engine/renderer/: ctor.cpp  dtor.cpp  error.cpp  getter_setter.cpp  init.cpp  render.cpp  renderer.hpp  shader.cpp  texture.cpp
src/engine/resources/: ctor.cpp  manager.hpp  read.cpp  root.cpp
src/engine/scene/: ctor.cpp  getter_setter.cpp  object.cpp  scene.hpp
src/engine/sound/: sounds.hpp
src/engine/transform/: ctor.cpp  dtor.cpp  getter_setter.cpp  renderable.cpp  transform.hpp  update.cpp
src/engine/version/: version.cpp.in  version.hpp
src/game/: camera.cpp  ctor.cpp  dtor.cpp  game.cpp  game.hpp  input.cpp  logic.cpp  object.cpp  physics.cpp  render.cpp  run.cpp
src/level_editor/: main.cpp
src/level_editor/editor/: editor.hpp
src/level_editor/player/: player.cpp  player.hpp
src/object/: object.hpp
src/physics/engine/: ctor_setter_getter.cpp  engine.hpp  object.cpp  singleton.cpp  update.cpp
src/physics/field/: bounded_field.hpp  field.cpp
src/physics/object/: collision.cpp  ctor.cpp  geometry.cpp  getter_setter.cpp  object.cpp  object.hpp  timestep.cpp
src/renderable/: cache.cpp  renderable.hpp
src/shapes/: circle.cpp  circle.hpp  geometric_equation.cpp  geometric_equation.hpp  line.cpp  line.hpp  polygon.cpp  polygon.hpp  shapes.hpp
src/tests/: physics.cpp  renderer.cpp  shapes.cpp
src/transform/: ctor.cpp  transform.hpp
tests/: physics.cpp  shapes.cpp
(+302 files in other folders)
